# fastapi-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
database/: companies.csv  employees.csv  users.csv
database/initdb/: init.sql
src/app/: database.py  main.py  readme.md
src/app/cruds/: company.py  data.py  employee.py  user.py
src/app/models/: __init__.py  company_model.py  employee_model.py  user_model.py
src/app/module/: custom_class.py  send_email.py
src/app/routers/: data.py
src/app/routers/datasys/: __init__.py  company_router.py  employee_router.py  user_router.py
src/app/schemas/: company_schema.py  employee_schema.py  user_schema.py
src/app/settings/: settings.py
src/app/settings/.envs/: common.env
